@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added default templates
+  - Added $xor->site_links method
+  - Added XOR::Link class
 
 0.03      2022-09-11 04:02:40 -0600
   - Added docs_root for use with nginx, apache etc.
